--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "@chakra-ui/nuxt": "^0.3.4",
     "@nuxtjs/emotion": "^0.1.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@types/animejs": "^3.1.4",
+    "animate.css": "^4.1.1",
     "core-js": "^3.15.2",
-    "nuxt": "^2.15.7",
-    "vue-animejs": "^2.1.1"
+    "nuxt": "^2.15.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
