--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@nuxtjs/pwa": "^3.3.5",
     "animate.css": "^4.1.1",
     "core-js": "^3.15.2",
-    "nuxt": "^2.15.7"
+    "fibers": "^5.0.0",
+    "nuxt": "^2.15.7",
+    "sass-loader": "10",
+    "vue-animate-onscroll": "^1.0.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -38,6 +41,7 @@
     "eslint-plugin-vue": "^7.14.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "sass": "^1.35.2"
   }
 }
