--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@chakra-ui/nuxt": "^0.4.1",
+    "@chakra-ui/vue": "^0.10.1",
+    "@emotion/css": "^11.1.3",
     "@nuxtjs/emotion": "^0.1.0",
     "@nuxtjs/pwa": "^3.3.5",
     "animate.css": "^4.1.1",
@@ -22,8 +24,8 @@
     "vue-animate-onscroll": "^1.0.8"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@babel/eslint-parser": "^7.15.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nuxt/image": "^0.5.0",
     "@nuxt/types": "^2.15.8",
