--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,37 @@
       }
     }
   ],
-  "routes": [
+  "headers": [
     {
-      "src": "/sw.js",
-      "continue": true,
-      "headers": {
-        "Cache-Control": "public, max-age=0, must-revalidate",
-        "Service-Worker-Allowed": "/"
-      }
+      "source": "/_nuxt/(.+)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "max-age=31557600"
+        }
+      ]
+    },
+    {
+      "source": "/(.+)\\.(png|jpg|jpeg|ico|txt)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31557600"
+        }
+      ]
+    },
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=43200, immutable"
+        },
+        {
+          "key": "Service-Worker-Allowed",
+          "value": "/"
+        }
+      ]
     }
   ]
 }
